# misc_rust

./: README.md
bezier_circle_approximation/: Cargo.toml
bezier_circle_approximation/src/: main.rs
net_common/: Cargo.toml
net_common/src/: lib.rs
net_loopback/: Cargo.toml  README.md
net_loopback/src/: lib.rs
nucleo_embassy/: Cargo.toml  README.md  build.rs  cargo_build.sh  gdb.sh  openocd.sh
nucleo_embassy/src/: lib.rs  main.rs
nucleo_postcard/: Cargo.toml  README.md  build.rs  openocd.gdb  openocd_std32h753.cfg
nucleo_postcard/src/: lib.rs
platforming/: Cargo.toml
platforming/src/: lib.rs  main.rs  text.rs
two_point_five_d/: Cargo.toml
two_point_five_d/src/: main.rs
uom_quantity_example/: Cargo.toml
uom_quantity_example/src/: main.rs
