[package]
name = "nucleo_embassy"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-log = "0.8.0"
cortex-m-rt = "0.7.5"
cortex-m-semihosting = "0.5.0"
embassy-executor = { version = "0.8.0", features = ["executor-thread", "arch-cortex-m"] }
embassy-stm32 = { version = "0.2.0", features = ["memory-x", "time-driver-any", "unstable-pac", "exti", "stm32h753zi"] }
embassy-time = { version = "0.4.0", features = ["tick-hz-32_768"] }
panic-halt = "0.2.0"
panic-itm = { version = "0.4.2" }
panic-rtt-target = { version = "0.1.1", features = [ "cortex-m" ] }
# panic-semihosting = { version = "0.6.0" }
rtt-target = { version = "0.3.1", features = [ "cortex-m" ] }

smoltcp = { version = "0.8.1", default-features = false, features = [
    "medium-ethernet",
    "proto-ipv4",
    # "proto-ipv6",
    "socket-raw",
    "socket-udp"
] }
sntpc = { version = "0.6.0", default-features = false, features = [ "sync" ] }
postcard = "1.1.3"

# https://github.com/embassy-rs/embassy/issues/4489
[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "f2be66a5f94a655696407e2e7bc81c322aab3ea1" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "f2be66a5f94a655696407e2e7bc81c322aab3ea1" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "f2be66a5f94a655696407e2e7bc81c322aab3ea1" }
